--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -46,8 +46,8 @@ Cart-Data:
     Type: environment
     Description: "Unique ID which identified the gear. This value changes between gears."
 Provides:
-  - diy-0.1
-  - diy
+  - fuse-0.1
+  - fuse
 Publishes:
   publish-http-url:
     Type: "NET_TCP:httpd-proxy-info"
