Add port information to manifest. Have setup script to install fuse fabric 7.2.0. Misc improvements

--- a/bin/control
+++ b/bin/control
@@ -1,25 +1,30 @@
 #!/bin/bash
 source $OPENSHIFT_CARTRIDGE_SDK_BASH
 
+FUSE_BIN_DIR=${OPENSHIFT_FUSE_DIR}/container/bin
+FUSE_PID_FILE=${OPENSHIFT_FUSE_DIR}/container/instances/instance.properties
+
 function start() {
-    client_result "Starting DIY cart"
-    source $OPENSHIFT_REPO_DIR/.openshift/action_hooks/start
+    client_result "Starting FUSE cart"
+    ${FUSE_BIN_DIR}/start
+    #source $OPENSHIFT_REPO_DIR/.openshift/action_hooks/start
 }
 
 function stop() {
-    client_result "Stopping DIY cart"
-    source $OPENSHIFT_REPO_DIR/.openshift/action_hooks/stop
+    client_result "Stopping FUSE cart"
+    ${FUSE_BIN_DIR}/stop
+    #source $OPENSHIFT_REPO_DIR/.openshift/action_hooks/stop
 }
 
 function restart() {
-    client_result "Restarting DIY cart"
+    client_result "Restarting FUSE cart"
     stop
     start
 }
 
 function status() {
-   if output=$(curl http://$OPENSHIFT_DIY_IP:$OPENSHIFT_DIY_PORT 2>&1 )
-   then
+   PID=`cat $FUSE_PID_FILE | grep "item.0.pid" | awk -F "=" '{print $2}'`
+   if [ "$PID" = "" ]; then
       client_result "Application is running"
    else
       client_result "Application is either stopped or inaccessible"
@@ -27,14 +32,14 @@ function status() {
 }
 
 function reload() {
-    client_result "Reloading DIY cart"
+    client_result "Reloading FUSE cart"
     restart
 }
 
 function tidy() {
-  client_message "Emptying log dir: $OPENSHIFT_DIY_LOG_DIR"
+  client_message "Emptying log dir: $OPENSHIFT_FUSE_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_DIY_LOG_DIR/*
+  rm -rf $OPENSHIFT_FUSE_LOG_DIR/*
 }
 
 case "$1" in
