--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,8 +1,8 @@
 Name: fuse
 Cartridge-Short-Name: Fuse
-Display-Name: JBoss Fuse 0.1
+Display-Name: JBoss Fuse 7.2.0
 Description: "Runs JBoss Fuse on OpenShift."
-Version: '0.1'
+Version: '7.2.0'
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Cartridge-Version: 0.0.1
@@ -15,7 +15,7 @@ Website:
 Help-Topics:
   "Getting Started": https://www.openshift.com/community/videos/getting-started-with-diy-applications-on-openshift
 Cart-Data:
-  - Key: OPENSHIFT_DIY_LOG_DIR
+  - Key: OPENSHIFT_FUSE_LOG_DIR
     Type: environment
     Description: "Directory to store application log files."
   - Key: OPENSHIFT_TMP_DIR
@@ -68,11 +68,23 @@ Group-Overrides:
     - web-proxy
 Endpoints:
   - Private-IP-Name:   IP
-    Private-Port-Name: PORT
+    Private-Port-Name: HTTP_PORT
     Private-Port:      8080
     Public-Port-Name:  PROXY_PORT
     Mappings:
       - Frontend:      ""
         Backend:       ""
         Options:       { websocket: true }
+  - Private-IP-Name:   IP
+    Private-Port-Name: SSH_PORT
+    Private-Port:      8101
+  - Private-IP-Name:   IP
+    Private-Port-Name: RMI_SERVER_PORT
+    Private-Port:      44444
+  - Private-IP-Name:   IP
+    Private-Port-Name: RMI_REGISTRY_PORT
+    Private-Port:      1099
+  - Private-IP-Name:   IP
+    Private-Port-Name: ZOOKEEPER_PORT
+    Private-Port:      2181
 Install-Build-Required: false
