--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -3,6 +3,7 @@ Cartridge-Short-Name: Fuse
 Display-Name: JBoss Fuse 7.2.0
 Description: "Runs JBoss Fuse on OpenShift."
 Version: '7.2.0'
+Source-Url: https://github.com/jboss-fuse/fuse-openshift-cartridge/archive/master.zip
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Cartridge-Version: 0.0.1
