Explicitly kill container when stopping

--- a/bin/control
+++ b/bin/control
@@ -11,8 +11,8 @@ function start() {
 
 function stop() {
     PID=`cat $FUSE_PID_FILE | grep "item.0.pid" | awk -F " = " '{print $2}'`
-    ${FUSE_BIN_DIR}/stop
-    for i in {1..10};
+    kill $PID
+    for i in {1..20};
         do
             if ps -p $PID > /dev/null; then
                 echo "Fabric has been successfully stopped"
