--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -46,6 +46,9 @@ Cart-Data:
   - Key: OPENSHIFT_GEAR_UUID
     Type: environment
     Description: "Unique ID which identified the gear. This value changes between gears."
+  - Key: OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD
+    Type: environment
+    Description: "The registry password."
 Provides:
   - fuse-7.3.0
   - fuse
