Fix cartridge to not use environment variables in bin/setup and bin/install Switch to 1.0.0 version Clean things a bit

--- a/bin/control
+++ b/bin/control
@@ -4,11 +4,80 @@ source $OPENSHIFT_CARTRIDGE_SDK_BASH
 FUSE_BIN_DIR=${OPENSHIFT_FUSE_DIR}/container/bin
 FUSE_PID_FILE=${OPENSHIFT_FUSE_DIR}/container/instances/instance.properties
 FUSE_PASSWD_FILE=${OPENSHIFT_FUSE_DIR}/container/etc/passwd
+FUSE_USRPROPS_FILE=${OPENSHIFT_FUSE_DIR}/container/etc/users.properties
+FUSE_SYSPROPS_FILE=${OPENSHIFT_FUSE_DIR}/container/etc/system.properties
+
+function replace_property_value {
+  sed "s/$1.*=.*/$1 = $2/g" $3 > $3.tmp
+  rm $3
+  mv $3.tmp $3
+}
+
+function setup() {
+	if [ ! -f $FUSE_PASSWD_FILE ]; then
+
+		client_result "Setting up zookeeper connection"
+
+		# Retrieve password
+		if [ ! -z "${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD:-}" ]; then
+  		  client_result "Using provided password from cartridge"
+        elif [ ! -z "${OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_PASSWORD:-}" ]; then
+   		  client_result "Using provided password from domain"
+  		  export OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD=${OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_PASSWORD}
+		  echo OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD > ${OPENSHIFT_FUSE_DIR}/env/OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD
+		else
+		  # generate password and setup env vars
+		  client_result "Generating password"
+  		  export OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD=$(generate_password)
+		  echo OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD > ${OPENSHIFT_FUSE_DIR}/env/OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD
+		fi
+		# Store password
+		echo "admin=${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD},admin" > $FUSE_USRPROPS_FILE
+		echo "${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}" > $FUSE_PASSWD_FILE
+        echo "zookeeper.password=${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}" >> $FUSE_SYSPROPS_FILE
+
+		# Configure to join an existing fabric
+		if [ ! -z "${OPENSHIFT_FUSE_ZOOKEEPER_URL:-}" ]; then
+		  client_result "Using provided url from cartridge"
+		  echo "zookeeper.url=$OPENSHIFT_FUSE_ZOOKEEPER_URL" >> $FUSE_SYSPROPS_FILE
+        elif  [ ! -z "${OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL:-}" ]; then
+		  client_result "Using provided url from domain"
+		  export OPENSHIFT_FUSE_ZOOKEEPER_URL=${OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL}
+          echo "${OPENSHIFT_FUSE_ZOOKEEPER_URL}" > ${OPENSHIFT_FUSE_DIR}/env/OPENSHIFT_FUSE_ZOOKEEPER_URL
+  		  echo "zookeeper.url=$OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL" >> $FUSE_SYSPROPS_FILE
+		# Turn into a fabric root container
+		else
+          # Additional system properties
+		  client_result "Configuring zookeeper server"
+  		  export OPENSHIFT_FUSE_ZOOKEEPER_URL=${OPENSHIFT_GEAR_DNS}:${OPENSHIFT_FUSE_ZOOKEEPER_PROXY_PORT}
+          echo "${OPENSHIFT_FUSE_ZOOKEEPER_URL}" > ${OPENSHIFT_FUSE_DIR}/env/OPENSHIFT_FUSE_ZOOKEEPER_URL
+		  replace_property_value ensemble.auto.start true $FUSE_SYSPROPS_FILE
+          echo "zookeeper.server.port=${OPENSHIFT_FUSE_ZOOKEEPER_PORT}" >> $FUSE_SYSPROPS_FILE
+          echo "zookeeper.server.connection.port=${OPENSHIFT_FUSE_ZOOKEEPER_PROXY_PORT}" >> $FUSE_SYSPROPS_FILE
+		fi
+
+		client_result ""
+		client_result "Fuse created successfully.  Please make note of these credentials:"
+		client_result ""
+		client_result "   Console User:       admin"
+		client_result "   Console Password:   ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
+  	    client_result "   Zookeeper URL:      ${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
+		client_result "   Zookeeper Password: ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
+		client_result ""
+
+		add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
+		add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_PASSWORD=${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
+
+		cart_props "username=admin"
+		cart_props "password=${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
+	fi
+}
 
 function start() {
+	client_result "Starting"
+	setup
     ${FUSE_BIN_DIR}/start
     wait_for_start    
-    #fabric_join
     client_result "Started Fuse cart"
 }
 
