--- a/bin/control
+++ b/bin/control
@@ -59,10 +59,13 @@ function setup() {
 	client_result ""
 	client_result "Fuse created successfully.  Please make note of these credentials:"
 	client_result ""
+	client_result "   Console URL:        http://${OPENSHIFT_GEAR_DNS}"
 	client_result "   Console User:       admin"
 	client_result "   Console Password:   ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
 	client_result "   Zookeeper URL:      ${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
 	client_result "   Zookeeper Password: ${OPENSHIFT_FUSE_ZOOKEEPER_PASSWORD}"
+	client_result ""
+	client_result "   The Fuse Management Console will be available shortly at: http://${OPENSHIFT_GEAR_DNS}"
 	client_result ""
 
 	add_domain_env_var "OPENSHIFT_FUSE_DOMAIN_ZOOKEEPER_URL=${OPENSHIFT_FUSE_ZOOKEEPER_URL}"
