Do not start fuse again if already running
Conflicts:
	bin/control

--- a/bin/control
+++ b/bin/control
@@ -90,13 +90,17 @@ function setup() {
 }
 
 function start() {
-	if [ ! -f $FABRIC_CHECKER ]; then
-		setup
-	else
-		${FUSE_BIN_DIR}/start
-		wait_for_start    
-	fi
-    client_result "Started Fuse cart"
+  if is_running; then
+    client_message "Fuse cart already started"
+  else  
+    if [ ! -f $FABRIC_CHECKER ]; then
+      setup
+    else
+      ${FUSE_BIN_DIR}/start
+      wait_for_start    
+    fi
+    client_message "Started Fuse cart"
+  fi
 }
 
 function stop() {
@@ -117,7 +121,6 @@ function stop() {
     else
          echo "Fuse cart was stopped already"
     fi
-}
 
 function restart() {
     if is_running; then
@@ -158,6 +161,7 @@ function is_running() {
    elif ps -p $PID > /dev/null; then
       return 0
    else
+      rm $FUSE_PID_FILE
       return 1
    fi
 }
