--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -7,7 +7,7 @@ Source-Url: https://github.com/jboss-fuse/fuse-openshift-cartridge/archive/maste
 License: "ASL 2.0"
 License-Url: http://www.apache.org/licenses/LICENSE-2.0.txt
 Cartridge-Version: 0.0.1
-Cartridge-Vendor: fusesource
+Cartridge-Vendor: redhat
 Vendor: redhat
 Categories:
   - web_framework
