--- a/bin/control
+++ b/bin/control
@@ -92,7 +92,8 @@ function setup() {
 function start() {
   if is_running; then
     client_message "Fuse cart already started"
-  elif [ ! -f $FABRIC_CHECKER ]; then
+  else  
+    if [ ! -f $FABRIC_CHECKER ]; then
       setup
     else
       ${FUSE_BIN_DIR}/start
@@ -103,6 +104,7 @@ function start() {
 }
 
 function stop() {
+    if [ -f $AMQ_PID_FILE ]; then
         PID=`cat $FUSE_PID_FILE | grep "item.0.pid" | awk -F " = " '{print $2}'`
         ${FUSE_BIN_DIR}/stop
         for i in {1..20};
@@ -116,6 +118,9 @@ function stop() {
                 fi
             done
         client_result "Stopped Fuse cart"
+    else
+         echo "Fuse cart was stopped already"
+    fi
 }
 
 function restart() {
