fuse cartridge should support threaddump feature
https://bugzilla.redhat.com/show_bug.cgi?id=1087708

--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -120,3 +120,5 @@ Endpoints:
     Public-Port-Name:  ES_TCP_PROXY_PORT
     Options:           { "ssl_to_gear": true }
 Install-Build-Required: false
+Additional-Control-Actions:
+- threaddump
