--- a/bin/control
+++ b/bin/control
@@ -118,6 +118,22 @@ function fabric_shell() {
  ${FUSE_BIN_DIR}/client -h ${OPENSHIFT_FUSE_IP} -u admin -p ${password} $*
 }
 
+function threaddump() {
+  echo "Thread dump for Fuse cartridge"
+
+    if ! is_running; then
+        echo "Application is stopped"
+    elif [ -f "$FUSE_PID_FILE" ]; then
+        pid=`cat $FUSE_PID_FILE | grep "item.0.pid" | awk -F " = " '{print $2}'`
+        jstack -l $pid > $OPENSHIFT_FUSE_LOG_DIR/threaddump.log
+        client_result "Success"
+        client_result ""
+        client_result "The thread dump file will be available via: rhc tail $OPENSHIFT_APP_NAME -g $OPENSHIFT_GEAR_UUID -f ${OPENSHIFT_FUSE_LOG_DIR}threaddump.log -o '-n 250'"
+    else 
+        echo "Failed to locate Fuse PID File"
+    fi
+}
+
 case "$1" in
   deploy)    deploy ;;
   start)     start ;;
@@ -126,5 +142,6 @@ case "$1" in
   status)    status ;;
   reload)    reload ;;
   tidy)      tidy ;;
+  threaddump)      threaddump ;;
   *)         exit 0
 esac
